--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </main>
     <article class="widget">
       <div class="btns">
-        <a href="https://github.com/AryelsonTevis">
+        <a href="https://aryelsontevis.github.io/Projeto_cards_ror_Human/">
           <button class="btn">Humanos</button></a
         >
       </div>
